# deckly

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.dev.yaml  compose.yaml  pyproject.toml  pytest.ini  requirements.txt
backend/: account_router.py  auth.py  auth_router.py  card_router.py  config.py  db.py  deck_router.py  deck_share_router.py  deck_study_router.py  decks.py  image_router.py  images.py  main.py  models.py  page_router.py  quiz_attempts.py  quiz_pages.py  quiz_router.py  quizzes.py  rate_limits.py  review_router.py  runtime.py  schemas.py  security_services.py  spaced_repetition.py  time_utils.py
docker/: entrypoint.sh
docs/: SPACED_REPETITION_QA_REPORT.md  SPACED_REPETITION_UX_FIXES_2026-03-31.md  SPACED_REPETITION_UX_RESEARCH.md
frontend/: app-auth.js  app-common.js  app-shell.js  deck-page.js  deck.css  deck.html  index-page.js  index.css  index.html  quiz-common.js  quiz-detail.html  quiz-editor-page.js  quiz-editor.html  quiz-library-page.js  quiz-results-page.js  quiz-results.html  quiz-review-page.js  quiz-review.html  quiz-session.html  quiz.html  settings-page.js  settings.html  study-actions.js  study-controls.js  study-page.js  study-render.js  study-session.js  study-viewer.js  study.css  study.html
frontend/pages/deck/: deck-page.js  index.html
frontend/pages/home/: index-page.js  index.css  (+1 more)
scripts/: start-local-postgres.sh
tests/: conftest.py  helpers.py  postgres_utils.py  test_auth.py  test_db.py  test_frontend_routes.py  test_hardening.py  test_main.py  test_models.py  test_quiz.py  test_schemas.py
(+28 files in other folders)
